fix: font size and overlapping of title text

--- a/src/components/TotalOrgSummary/TotalOrgSummary.css
+++ b/src/components/TotalOrgSummary/TotalOrgSummary.css
@@ -184,11 +184,12 @@
 }
 
 .chart-title p {
-  font-size: 1.5em !important;
+  font-size: 1.8rem !important;
   font-weight: bold;
   text-align: center;
   margin: 10px;
   color: #333;
+  line-height: 1.3 !important;
 }
 
 /* Report Header Styles */
